// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsingSideBar renders correctly 1`] = `
<div>
  <section
    aria-labelledby="collapsing-side-bar-:r0:-heading"
    class="css-1dkbvi7-boxStyles-CollapsingSideBar"
  >
    <div
      class="css-bmr02n-boxStyles-CollapsingSideBar"
    >
      <div
        class="css-1ynq4lf-boxStyles-CollapsingSideBar"
        id="collapsing-side-bar-:r0:-heading"
      >
        <h2
          class="css-pkkmd5-boxStyles"
        >
          Title
        </h2>
        <span
          class="css-1ntyv7o-boxStyles"
        >
          Subtitle
        </span>
      </div>
      <button
        aria-controls="collapsing-side-bar-:r0:-body"
        aria-expanded="false"
        aria-label="Title"
        class="css-1wqtlfl-BaseButton-boxStyles-CollapsingSideBar"
        type="button"
      >
        <span
          class="css-1eiy0fa-boxStyles"
        >
          <span
            class="css-1wcx0lf-boxStyles"
          >
            <span
              class="css-1rvfmyi-boxStyles-CollapsingSideBar"
            >
              Title
            </span>
            <span
              class="css-1ntyv7o-boxStyles"
            >
              Subtitle
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-lewdp2-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="css-5z6nrp-useTransitionHeight-CollapsingSideBar"
      data-transition-height="collapsed"
      id="collapsing-side-bar-:r0:-body"
    >
      <div
        class="css-79i25n-boxStyles"
      >
        Content
      </div>
    </div>
  </section>
</div>
`;

exports[`CollapsingSideBar renders customTitleElement correctly 1`] = `
<div>
  <section
    aria-labelledby="collapsing-side-bar-:r1:-heading"
    class="css-1dkbvi7-boxStyles-CollapsingSideBar"
  >
    <div
      class="css-bmr02n-boxStyles-CollapsingSideBar"
    >
      <div
        class="css-lr9d04-boxStyles-CollapsingSideBar"
        id="collapsing-side-bar-:r1:-heading"
      >
        <h2>
          Custom Title
        </h2>
      </div>
      <button
        aria-controls="collapsing-side-bar-:r1:-body"
        aria-expanded="false"
        aria-label="Title"
        class="css-1wqtlfl-BaseButton-boxStyles-CollapsingSideBar"
        type="button"
      >
        <span
          class="css-1eiy0fa-boxStyles"
        >
          <span
            class="css-1wcx0lf-boxStyles"
          >
            <span
              class="css-1rvfmyi-boxStyles-CollapsingSideBar"
            >
              Title
            </span>
            <span
              class="css-1ntyv7o-boxStyles"
            >
              Subtitle
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-lewdp2-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="css-5z6nrp-useTransitionHeight-CollapsingSideBar"
      data-transition-height="collapsed"
      id="collapsing-side-bar-:r1:-body"
    >
      <div
        class="css-79i25n-boxStyles"
      >
        Content
      </div>
    </div>
  </section>
</div>
`;
